[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/distilling_minigame.gd" id="1_mg"]

[node name="DistillingMinigame" type="CanvasLayer"]
layer = 20
script = ExtResource("1_mg")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="BarBG" type="ColorRect" parent="."]
offset_left = 38.0
offset_top = 78.0
offset_right = 282.0
offset_bottom = 102.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="ForeshotsBar" type="ColorRect" parent="."]
offset_left = 40.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 100.0
color = Color(0.6, 0.2, 0.2, 1)

[node name="HeadsBar" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 80.0
offset_right = 112.0
offset_bottom = 100.0
color = Color(0.7, 0.5, 0.2, 1)

[node name="HeartsBar" type="ColorRect" parent="."]
offset_left = 112.0
offset_top = 80.0
offset_right = 208.0
offset_bottom = 100.0
color = Color(0.3, 0.7, 0.3, 1)

[node name="TailsBar" type="ColorRect" parent="."]
offset_left = 208.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 100.0
color = Color(0.5, 0.4, 0.2, 1)

[node name="Indicator" type="ColorRect" parent="."]
offset_left = 40.0
offset_top = 74.0
offset_right = 43.0
offset_bottom = 106.0
color = Color(1, 1, 1, 1)

[node name="CutStartMarker" type="ColorRect" parent="."]
visible = false
offset_left = 40.0
offset_top = 74.0
offset_right = 43.0
offset_bottom = 106.0
color = Color(1, 0.3, 0.3, 1)

[node name="InstructionLabel" type="Label" parent="."]
offset_left = 80.0
offset_top = 55.0
offset_right = 240.0
offset_bottom = 75.0
horizontal_alignment = 1
text = "[E] 시작점 선택"

[node name="ResultLabel" type="Label" parent="."]
visible = false
offset_left = 100.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 130.0
horizontal_alignment = 1
text = "품질: 0%"
